# ha-mcp-readonly

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_NOTES.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.6.0.md  SECURITY.md  __init__.py  afds_config.yaml  conftest.py  coverage.json  coverage.xml  docker-compose.build.yml  docker-compose.yml  learnings.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  start.sh  todo.md  todo2.md  version.py
.github/: ci-cd-config.yaml  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  docs-validation.yml  publish.yml  semgrep-scheduled.yml  semgrep.yml
.omo/: boulder.json
.omo/plans/: ci-cd-compliance-v2.md  ha-semantic-graph.md  mcp-standard-v2-compliance.md  pre-commit-hook.md  skill-precommit-architect.md  v1.6.0-endpoints-standards.md
.omo/run-continuation/: ses_161277c77ffeJ8VjsPu4pCwuES.json  ses_1619644d5ffevzBHoO1mNweTWT.json  ses_1619fc89dffe3hKKyOL4vDO1T6.json
context_generator/: __init__.py  analyzers.py  constants.py  core.py  formatters.py  utils.py
docs/: documentation.md  testing-guidelines.md
ha_graph/: __init__.py  cache.py  export.py  extractors.py  models.py  queries.py  scanner.py
scripts/: detect_naive_datetime.py  detect_url_encoding.py  validate_registry_names.py
tests/: __init__.py  conftest.py  fixtures.py
tests/e2e/: __init__.py  conftest.py  test_all_tools_smoke.py  test_context_generator.py  test_server_api.py
tests/integration/: __init__.py  conftest.py  test_composite_integration.py  test_graph_tools.py  test_integration.py  test_real_ha.py  test_scripts_scenes.py
tests/smoke/: __init__.py  conftest.py  test_connectivity.py  test_critical_tools.py  test_input_validation.py  test_response_format.py
tests/unit/: __init__.py  conftest.py  test_areas.py  test_automations.py  test_batch_operations.py  test_blueprints.py  test_capabilities.py  test_categories.py  test_composite.py  test_config.py  test_config_entries.py  test_context_generator.py  test_dev_tools.py  test_devices.py  test_diagnostics.py  test_entity_context.py  test_entity_dependencies.py  test_filesystem_explorer.py  test_graph_extractors.py  test_graph_models.py  test_graph_queries.py  test_graph_scanner.py  test_graph_tools.py  test_ha_graph_cache.py  test_health_reporter.py  test_helpers_health.py  test_history.py  test_integrations.py  test_logs.py  test_lovelace.py  test_manifests.py  test_new_tools.py  test_observability.py  test_scenes.py  test_scripts.py  test_server.py  test_states.py  test_storage.py  test_utils.py  test_validators.py  (+2 more)
tools/: __init__.py  areas.py  automations.py  batch_operations.py  blueprints.py  capabilities.py  categories.py  composite.py  config.py  config_entries.py  constants.py  dev_tools.py  devices.py  diagnostics.py  entity_context.py  entity_dependencies.py  filesystem_explorer.py  graph_tools.py  health_reporter.py  helpers_health.py  history.py  integrations.py  logs.py  manifests.py  observability.py  scenes.py  scripts.py  states.py  storage.py  utils.py  validators.py  yaml_utils.py
