[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-mcp-readonly"
version = "1.6.0"
description = "Read-only MCP server for Home Assistant observation by AI assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Pawel Maciejewski", email = "paulomac1000@users.noreply.github.com" }
]
keywords = ["home-assistant", "mcp", "model-context-protocol", "ai", "llm", "iot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = [
    "fastmcp>=2.0.0,<4.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.scripts]
ha-mcp-readonly = "server:run_rest_api"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/paulomac1000/ha-mcp-readonly"
Repository = "https://github.com/paulomac1000/ha-mcp-readonly"
Issues = "https://github.com/paulomac1000/ha-mcp-readonly/issues"
Changelog = "https://github.com/paulomac1000/ha-mcp-readonly/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["tools*", "context_generator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tools", "context_generator"]
extra-standard-library = ["starlette", "fastmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short -W ignore::authlib.deprecate.AuthlibDeprecationWarning"
markers = [
    "unit: Unit tests (fast, mocked, no I/O)",
    "integration: Integration tests (slow, requires real backend)",
    "smoke: Smoke tests (quick health check, requires local MCP server)",
    "e2e: End-to-end tests (full pipeline, requires real backend + local MCP server)",
]

[tool.mypy]
strict = true
python_version = "3.14"
warn_unused_ignores = true
exclude = [
    "tests/",
    "build/",
]
disable_error_code = [
    "untyped-decorator",
]

[[tool.mypy.overrides]]
module = [
    "fastmcp.*", "fastmcp",
    "requests.*", "requests",
    "pyyaml.*", "pyyaml",
    "starlette.*", "starlette",
    "uvicorn.*", "uvicorn",
    "dateutil.*", "python_dateutil",
    "pydantic.*", "pydantic",
    "yaml.*", "yaml",
]
ignore_missing_imports = true

[tool.bandit]
exclude = ["tests/", "build/"]
skips = ["B101", "B303", "B311", "B404", "B603"]

[tool.coverage.run]
source = ["tools"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
